--- a/docs/assets/sass/libs/_vars.scss
+++ b/docs/assets/sass/libs/_vars.scss
@@ -1,72 +1,119 @@
 // Misc.
 	$misc: (
+		max-spotlights:		10,
+		max-features:		10,
+		z-index-base:		10000
 	);
 
 // Duration.
 	$duration: (
-		transition:			0.2s
+		transitions:		0.2s,
+		menu:				0.5s,
+		fadein:				3s
 	);
 
 // Size.
 	$size: (
-		border-radius:		6px,
-		border-width:		1px,
 		element-height:		2.75em,
-		element-margin:		2em
+		element-margin:		2em,
+		letter-spacing:		0.075em,
+		letter-spacing-alt:	0.225em
 	);
 
 // Font.
 	$font: (
-		family:				(Arial, Helvetica, sans-serif),
+		family:				('Open Sans', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
-		weight:				normal,
-		weight-bold:		bold
+		weight:				400,
+		weight-bold:		600,
+		weight-extrabold:	800
 	);
 
 // Palette.
 	$palette: (
-		bg:					#ffffff,
-		fg:					#999999,
-		fg-bold:			#828282,
-		fg-light:			#e0e0e0,
-		border:				#e6e6e6,
-		border-bg:			rgba(144,144,144,0.075),
-		border2:			#d6d6d6,
-		border2-bg:			rgba(144,144,144,0.15),
+		bg:					#2e3842,
+		fg:					#fff,
+		fg-bold:			#fff,
+		fg-light:			rgba(255,255,255,0.5),
+		border:				#fff,
+		border-bg:			rgba(144,144,144,0.25),
+		border2:			#fff,
+		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#4696e5,
-			fg:				mix(#4696e5, #ffffff, 25%),
+			bg:				#21b2a6,
 			fg-bold:		#ffffff,
-			fg-light:		mix(#4696e5, #ffffff, 40%),
-			border:			rgba(255,255,255,0.25),
+			fg:				mix(#21b2a6, #ffffff, 25%),
+			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(255,255,255,0.5),
-			border2-bg:		rgba(255,255,255,0.2),
-			invert:			true
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
 		),
 
 		accent2: (
-			bg:				#fbfbfb,
-			fg:				#999999,
-			fg-bold:		#828282,
-			fg-light:		#e0e0e0,
-			border:			#e6e6e6,
-			border-bg:		rgba(144,144,144,0.075),
-			border2:		#d6d6d6,
-			border2-bg:		rgba(144,144,144,0.15),
-			invert:			false
+			bg:				#00ffcc,
+			fg-bold:		#ffffff,
+			fg:				mix(#00ffcc, #ffffff, 25%),
+			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
 		),
 
 		accent3: (
-			bg:				#f7f7f7,
-			fg:				#999999,
-			fg-bold:		#828282,
-			fg-light:		#b0b0b0,
-			border:			#d6d6d6,
-			border-bg:		rgba(144,144,144,0.075),
-			border2:		#c6c6c6,
-			border2-bg:		rgba(144,144,144,0.15),
-			invert:			false
+			bg:				#00f0ff,
+			fg-bold:		#ffffff,
+			fg:				mix(#00f0ff, #ffffff, 25%),
+			fg-light:		mix(#00f0ff, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
+		),
+
+		accent4: (
+			bg:				#76ddff,
+			fg-bold:		#ffffff,
+			fg:				mix(#76ddff, #ffffff, 25%),
+			fg-light:		mix(#76ddff, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
+		),
+
+		accent5: (
+			bg:				#505393,
+			fg-bold:		#ffffff,
+			fg:				mix(#505393, #ffffff, 25%),
+			fg-light:		mix(#505393, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
+		),
+
+		accent6: (
+			bg:				#ed4933,
+			fg-bold:		#ffffff,
+			fg:				mix(#ed4933, #ffffff, 25%),
+			fg-light:		mix(#ed4933, #ffffff, 40%),
+			border:			rgba(0,0,0,0.125),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(0,0,0,0.25),
+			border2-bg:		rgba(255,255,255,0.2)
+		),
+
+		accent7: (
+			bg:				#ffffff,
+			fg-bold:		#2E3842,
+			fg:				#4E4852,
+			fg-light:		#8E8892,
+			border:			#dfdfdf,
+			border-bg:		rgba(0,0,0,0.0375),
+			border2:		#bfbfbf,
+			border2-bg:		rgba(0,0,0,0.1)
 		)
 	);
