upload app advantages

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2493,6 +2493,8 @@
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
+        padding-left: 80px;
+        padding-right: 80px;
 	}
 
 		.spotlight .image {
