--- a/HyuJokbo/HyuJokbo/GoohaeTabStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/GoohaeTabStoryboard.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pdK-CW-13G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pdK-CW-13G">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -459,7 +459,7 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="sB5-dS-p2A" secondAttribute="bottom" constant="-1" id="jl4-Ez-XUg"/>
                                         <constraint firstItem="rAc-ki-5AJ" firstAttribute="centerY" secondItem="vBL-NH-654" secondAttribute="centerY" id="l1d-0s-9cU"/>
                                         <constraint firstItem="qIb-UW-Rq9" firstAttribute="leading" secondItem="T16-9H-V9J" secondAttribute="leadingMargin" constant="5" id="nwR-n6-KkX"/>
-                                        <constraint firstItem="vBL-NH-654" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qIb-UW-Rq9" secondAttribute="bottom" constant="30" id="qG1-5f-A6U"/>
+                                        <constraint firstItem="vBL-NH-654" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qIb-UW-Rq9" secondAttribute="bottom" constant="180" id="qG1-5f-A6U"/>
                                         <constraint firstItem="qIb-UW-Rq9" firstAttribute="top" secondItem="T16-9H-V9J" secondAttribute="topMargin" constant="10" id="rji-Q6-7oT"/>
                                         <constraint firstItem="HLK-L6-qve" firstAttribute="leading" secondItem="T16-9H-V9J" secondAttribute="leadingMargin" constant="5" id="vCR-9Z-9R7"/>
                                         <constraint firstItem="sB5-dS-p2A" firstAttribute="leading" secondItem="HLK-L6-qve" secondAttribute="trailing" constant="1" id="yHD-Vd-Ace"/>
